--- a/Challenge04LGBB/View/Base.lproj/ForgetRecipe.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ForgetRecipe.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -23,22 +21,22 @@
             <objects>
                 <viewController storyboardIdentifier="ForgetRecipe" id="Y6W-OH-hqX" customClass="ForgotRecipeViewController" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6We-jP-4fX">
-                                <rect key="frame" x="0.0" y="48" width="414" height="848"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7E-sY-3am" userLabel="MainView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredientes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dnZ-PP-asU">
-                                                <rect key="frame" x="20" y="40" width="301" height="35"/>
+                                                <rect key="frame" x="20" y="40" width="487" height="35"/>
                                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="63" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bch-gj-vrQ">
-                                                <rect key="frame" x="20" y="100" width="374" height="240"/>
+                                                <rect key="frame" x="20" y="100" width="560" height="240"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="240" id="4dh-bj-g5r"/>
@@ -47,14 +45,14 @@
                                                 <color key="sectionIndexBackgroundColor" name="CorDaview"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="63" id="gic-db-xhe" customClass="TableIngredientCell" customModule="Mealmories" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="374" height="63"/>
+                                                        <rect key="frame" x="0.0" y="50" width="560" height="63"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gic-db-xhe" id="HFy-Ix-DOK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="560" height="63"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a6A-Fa-R1X">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="63"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ingredientes" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVc-Lm-YH9">
                                                                             <rect key="frame" x="46" y="8" width="301" height="50"/>
@@ -81,9 +79,9 @@
                                                             </constraints>
                                                         </tableViewCellContentView>
                                                         <connections>
-                                                            <outlet property="LabelCell" destination="tVc-Lm-YH9" id="dp9-lV-8LC"/>
                                                             <outlet property="bgView" destination="a6A-Fa-R1X" id="6Sj-Xn-afw"/>
                                                             <outlet property="imageCell" destination="z2j-z4-YOa" id="R9x-3b-6GJ"/>
+                                                            <outlet property="labelCell" destination="tVc-Lm-YH9" id="dp9-lV-8LC"/>
                                                         </connections>
                                                     </tableViewCell>
                                                 </prototypes>
@@ -94,18 +92,18 @@
                                                 </userDefinedRuntimeAttributes>
                                             </tableView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Etapas" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHk-4v-efi">
-                                                <rect key="frame" x="20" y="348" width="301" height="35"/>
+                                                <rect key="frame" x="20" y="348" width="487" height="35"/>
                                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verifique o total de etapas para serem feitas!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pz-LZ-rbo">
-                                                <rect key="frame" x="20" y="384" width="374" height="14"/>
+                                                <rect key="frame" x="20" y="384" width="560" height="14"/>
                                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="12"/>
                                                 <color key="textColor" name="Mealmories_Gray"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="63" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4sP-Ad-KqN" userLabel="TableEtapas">
-                                                <rect key="frame" x="20" y="406" width="374" height="240"/>
+                                                <rect key="frame" x="20" y="406" width="560" height="240"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="240" id="6ea-97-TcK"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="MNf-5V-HuX"/>
@@ -113,14 +111,14 @@
                                                 <color key="sectionIndexBackgroundColor" name="CorDaview"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell2" rowHeight="63" id="sZt-e7-PRF" customClass="TableEtapasCell" customModule="Mealmories" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="374" height="63"/>
+                                                        <rect key="frame" x="0.0" y="50" width="560" height="63"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sZt-e7-PRF" id="u0d-Se-Bz7">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="560" height="63"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jnI-M1-0gn">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="63"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O3C-WS-pRK">
                                                                             <rect key="frame" x="8" y="18" width="30" height="35"/>
@@ -160,7 +158,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </tableView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Esqueceu os ingredientes? Relembre Aqui!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giz-9P-XhJ">
-                                                <rect key="frame" x="20" y="72.5" width="374" height="14"/>
+                                                <rect key="frame" x="20" y="72.666666666666671" width="560" height="14"/>
                                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="12"/>
                                                 <color key="textColor" name="Mealmories_Gray"/>
                                                 <nil key="highlightedColor"/>
@@ -216,7 +214,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ScrollViewHeight" destination="Lcl-XF-nJA" id="g1Z-x8-6nz"/>
+                        <outlet property="scrollViewHeight" destination="Lcl-XF-nJA" id="g1Z-x8-6nz"/>
                         <outlet property="tableEtapas" destination="4sP-Ad-KqN" id="NCb-zd-KMW"/>
                         <outlet property="tableEtapasHeight" destination="6ea-97-TcK" id="yjf-U8-4Wd"/>
                         <outlet property="tableIngredients" destination="bch-gj-vrQ" id="Ne3-1s-nUM"/>
