--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Opa-JI-Qwx">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -29,14 +27,14 @@
             <objects>
                 <viewController storyboardIdentifier="Main" id="0BQ-UW-R7E" customClass="RecipeViewController" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="M38-D3-D1T">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-Tr-ppv" userLabel="TurnosView">
-                                <rect key="frame" x="20" y="112" width="374" height="70"/>
+                                <rect key="frame" x="20" y="64" width="560" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TURNOS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woD-OK-cUV">
-                                        <rect key="frame" x="134.5" y="12" width="105" height="25"/>
+                                        <rect key="frame" x="227.66666666666663" y="12" width="105" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="105" id="mhN-Kp-lsq"/>
                                             <constraint firstAttribute="height" constant="25" id="wlO-Rc-mpb"/>
@@ -46,7 +44,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MYZ-DJ-dAd" customClass="ProgressBar" customModule="Mealmories" customModuleProvider="target">
-                                        <rect key="frame" x="112" y="45" width="150" height="10"/>
+                                        <rect key="frame" x="205" y="45" width="150" height="10"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="AHA-UU-WwM"/>
@@ -70,7 +68,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pne-fb-yWh">
-                                <rect key="frame" x="20" y="773" width="67" height="69"/>
+                                <rect key="frame" x="20" y="511" width="67" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="69" id="cKz-sV-dLq"/>
                                     <constraint firstAttribute="width" constant="67" id="f44-1n-puz"/>
@@ -89,22 +87,22 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgN-Lf-PWV" userLabel="InstrucoesView">
-                                <rect key="frame" x="20" y="202" width="374" height="551"/>
+                                <rect key="frame" x="20" y="154" width="560" height="337"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adulto" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="f6u-Eg-cEd">
-                                        <rect key="frame" x="15" y="15" width="84.5" height="45"/>
+                                        <rect key="frame" x="15.000000000000007" y="15.000000000000002" width="126.66666666666669" height="27.666666666666671"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Em uma vasilha, junte os secos: polvinho doce e o parmesão" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="czN-bv-CPP">
-                                        <rect key="frame" x="27" y="409" width="320" height="44"/>
+                                        <rect key="frame" x="27" y="212" width="479" height="27"/>
                                         <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dos dois tipos de polvilho, o doce é mais recomendável dependendo do manuseio." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0aP-jH-D7M">
-                                        <rect key="frame" x="79" y="473" width="268" height="58"/>
+                                        <rect key="frame" x="79" y="259" width="268" height="58"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="268" id="S42-Dl-fJ0"/>
                                             <constraint firstAttribute="height" constant="58" id="pyt-Gy-91y"/>
@@ -113,13 +111,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siga a seguinte instrução:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-Vs-nYI">
-                                        <rect key="frame" x="15" y="70" width="262" height="27.5"/>
+                                        <rect key="frame" x="15" y="52.666666666666657" width="392" height="16.666666666666671"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dica - Blue" translatesAutoresizingMaskIntoConstraints="NO" id="bHA-oc-nL9">
-                                        <rect key="frame" x="27" y="486" width="32" height="32"/>
+                                        <rect key="frame" x="27" y="272" width="32" height="32"/>
                                         <color key="tintColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="32" id="BRw-5z-NCY"/>
@@ -127,7 +125,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhd-gs-qhb">
-                                        <rect key="frame" x="27" y="481.5" width="320" height="41.5"/>
+                                        <rect key="frame" x="40.333333333333343" y="271" width="479.33333333333326" height="34"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="gray" title="É hora de comer!">
                                             <fontDescription key="titleFontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="17"/>
@@ -139,7 +137,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="secos.1" translatesAutoresizingMaskIntoConstraints="NO" id="sWO-ff-cJH">
-                                        <rect key="frame" x="93.5" y="179" width="187" height="193"/>
+                                        <rect key="frame" x="140" y="109.66666666666669" width="280" height="117.66666666666669"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNc-zg-T6I">
                                         <rect key="frame" x="21" y="121" width="65" height="243"/>
@@ -170,13 +168,13 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="turno.adulto" translatesAutoresizingMaskIntoConstraints="NO" id="JIf-TP-zdD">
-                                        <rect key="frame" x="283" y="11" width="64" height="53"/>
+                                        <rect key="frame" x="469" y="11" width="64" height="35.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="64" id="kCg-m3-38H"/>
                                         </constraints>
                                     </imageView>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cs-nD-XrO">
-                                        <rect key="frame" x="114.5" y="15" width="68" height="35"/>
+                                        <rect key="frame" x="156.66666666666666" y="15" width="68" height="35"/>
                                         <color key="tintColor" red="1" green="0.2156862745" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Timer"/>
@@ -227,7 +225,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wY7-zh-pSu">
-                                <rect key="frame" x="327" y="773" width="67" height="69"/>
+                                <rect key="frame" x="513" y="511" width="67" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="67" id="gnK-tb-Gjs"/>
                                     <constraint firstAttribute="height" constant="69" id="n40-5n-aRH"/>
@@ -247,7 +245,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk8-2Y-0fh">
-                                <rect key="frame" x="172.5" y="773" width="69" height="69"/>
+                                <rect key="frame" x="265.66666666666669" y="511" width="69" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="69" id="LhA-Oa-l2g"/>
                                     <constraint firstAttribute="height" constant="69" id="inW-f5-Myh"/>
@@ -291,22 +289,22 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="BotaoTerminarReceita" destination="qhd-gs-qhb" id="UoQ-Ie-A7e"/>
-                        <outlet property="CorDoFundoDaTela" destination="YgN-Lf-PWV" id="9BW-iI-ULe"/>
-                        <outlet property="LabelDica" destination="0aP-jH-D7M" id="wQH-pV-eh4"/>
-                        <outlet property="LampImage" destination="bHA-oc-nL9" id="Opg-0H-DKY"/>
-                        <outlet property="TituloDaReceita" destination="CCX-UK-0q2" id="iWA-qN-eO1"/>
                         <outlet property="botaoFoto" destination="qk8-2Y-0fh" id="Hqd-Eq-FOF"/>
-                        <outlet property="botaoir" destination="wY7-zh-pSu" id="RAE-1s-HGR"/>
-                        <outlet property="botaovoltar" destination="pne-fb-yWh" id="ivp-rQ-2Et"/>
+                        <outlet property="botaoIr" destination="wY7-zh-pSu" id="RAE-1s-HGR"/>
+                        <outlet property="botaoTerminarReceita" destination="qhd-gs-qhb" id="UoQ-Ie-A7e"/>
+                        <outlet property="botaoVoltar" destination="pne-fb-yWh" id="ivp-rQ-2Et"/>
+                        <outlet property="corDoFundoDaTela" destination="YgN-Lf-PWV" id="9BW-iI-ULe"/>
                         <outlet property="imageTake" destination="KD5-gY-aLA" id="LER-t1-LWT"/>
                         <outlet property="imagemIntrucao" destination="sWO-ff-cJH" id="ha1-Lk-aQ7"/>
                         <outlet property="imagemTurno" destination="JIf-TP-zdD" id="IMw-OM-cd6"/>
+                        <outlet property="labelDica" destination="0aP-jH-D7M" id="wQH-pV-eh4"/>
                         <outlet property="labelImagem" destination="6V8-Vs-nYI" id="EnX-b5-8nI"/>
                         <outlet property="labelIntrucao" destination="czN-bv-CPP" id="Itu-e4-6Wd"/>
                         <outlet property="labelTurno" destination="f6u-Eg-cEd" id="iQ0-jg-He7"/>
+                        <outlet property="lampImage" destination="bHA-oc-nL9" id="Opg-0H-DKY"/>
                         <outlet property="progressBar" destination="MYZ-DJ-dAd" id="zTf-76-fXb"/>
                         <outlet property="sceneView" destination="DRE-uS-8E7" id="yhs-Og-bUr"/>
+                        <outlet property="tituloDaReceita" destination="CCX-UK-0q2" id="iWA-qN-eO1"/>
                         <outlet property="viewTurno" destination="Hoa-Tr-ppv" id="RuT-uU-pVG"/>
                     </connections>
                 </viewController>
