--- a/Challenge04LGBB/View/Base.lproj/Template.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Template.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -22,11 +20,11 @@
             <objects>
                 <viewController storyboardIdentifier="Template" id="Y6W-OH-hqX" customClass="TemplateScreen" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jas-Fp-geX">
-                                <rect key="frame" x="20" y="733" width="350" height="57"/>
+                                <rect key="frame" x="20" y="523" width="350" height="57"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="YK8-YC-S1M"/>
                                 </constraints>
@@ -46,7 +44,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ln-ka-WxD">
-                                <rect key="frame" x="20" y="96.999999999999972" width="350" height="474.33333333333326"/>
+                                <rect key="frame" x="20" y="49.999999999999972" width="350" height="474.33333333333326"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pão de Queijo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="5Bi-AQ-e39">
                                         <rect key="frame" x="20" y="20" width="310" height="35"/>
@@ -112,9 +110,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="Imagem" destination="Jix-3G-pJ2" id="i4u-vd-pdx"/>
                         <outlet property="Name" destination="5Bi-AQ-e39" id="wSW-Fw-efd"/>
                         <outlet property="imagemMedalha" destination="ViK-jH-EW8" id="Upp-Sp-yk6"/>
+                        <outlet property="photo" destination="Jix-3G-pJ2" id="i4u-vd-pdx"/>
                         <outlet property="shareView" destination="7ln-ka-WxD" id="1CI-cY-17Y"/>
                     </connections>
                 </viewController>
